--- a/src/app/percursos/pesquisa-operacional/page.module.css
+++ b/src/app/percursos/pesquisa-operacional/page.module.css
@@ -320,6 +320,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    pointer-events: none;
   }
   
   .backgroundRectangle2 {
@@ -330,6 +331,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    pointer-events: none;
   }
   
   .header {
@@ -465,6 +467,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    pointer-events: none;
   }
   
   .backgroundRectangle2 {
@@ -475,6 +478,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    pointer-events: none;
   }
   
   .header {
@@ -608,6 +612,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    pointer-events: none;
   }
   
   .backgroundRectangle2 {
@@ -618,6 +623,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    pointer-events: none;
   }
   
   .header {
@@ -750,6 +756,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    pointer-events: none;
   }
   
   .backgroundRectangle2 {
@@ -760,6 +767,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    pointer-events: none;
   }
   
   
